@@ -17,26 +17,21 @@
 
 package org.apache.oodt.cas.workflow.repository;
 
-//OODT imports
-import org.apache.oodt.cas.workflow.util.DbStructFactory;
 import org.apache.oodt.cas.workflow.examples.NoOpTask;
-import org.apache.oodt.cas.workflow.structs.Workflow;
-import org.apache.oodt.cas.workflow.structs.WorkflowConditionConfiguration;
-import org.apache.oodt.cas.workflow.structs.WorkflowTask;
-import org.apache.oodt.cas.workflow.structs.WorkflowTaskConfiguration;
-import org.apache.oodt.cas.workflow.structs.WorkflowCondition;
+import org.apache.oodt.cas.workflow.structs.*;
 import org.apache.oodt.cas.workflow.structs.exceptions.RepositoryException;
+import org.apache.oodt.cas.workflow.util.DbStructFactory;
 
-//JDK imports
-import java.util.List;
-import java.util.Vector;
-import java.util.logging.Logger;
-import java.util.logging.Level;
-import javax.sql.DataSource;
 import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
+import java.util.List;
+import java.util.Vector;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
+import javax.sql.DataSource;
 
 /**
  * 
@@ -85,7 +80,12 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
     Workflow workflow = null;
 
     try {
-      conn = dataSource.getConnection();
+      if(dataSource!=null) {
+        conn = dataSource.getConnection();
+      }
+      else{
+        throw new RepositoryException("Null datasource");
+      }
       statement = conn.createStatement();
 
       String getWorkflowSql = "SELECT * from workflows WHERE workflow_name = '"
@@ -108,11 +108,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING,
           "Exception getting workflow. Message: " + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(
             Level.SEVERE,
@@ -128,7 +130,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -137,7 +138,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -147,7 +147,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -174,8 +173,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
     Workflow workflow = null;
 
     try {
-      conn = dataSource.getConnection();
-      statement = conn.createStatement();
+
+      if(dataSource!=null) {
+        conn = dataSource.getConnection();
+      }
+      else{
+        throw new RepositoryException("Null datasource");
+      }      statement = conn.createStatement();
 
       String getWorkflowSql = "SELECT * from workflows WHERE workflow_id = '"
           + workflowId + "'";
@@ -197,11 +201,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING,
           "Exception getting workflow. Message: " + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(
             Level.SEVERE,
@@ -217,7 +223,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -226,7 +231,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -236,7 +240,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -291,11 +294,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING,
           "Exception getting workflows. Message: " + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(
             Level.SEVERE,
@@ -311,7 +316,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -320,7 +324,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -330,7 +333,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -378,11 +380,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING, "Exception getting tasks for workflow. Message: "
           + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getTasksByWorkflowId transaction. Message: "
@@ -397,7 +401,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -406,7 +409,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -416,20 +418,19 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
     return tasks;
   }
 
-  public List getTasksByWorkflowName(String workflowName)
+  public List<WorkflowTask> getTasksByWorkflowName(String workflowName)
       throws RepositoryException {
     Connection conn = null;
     Statement statement = null;
     ResultSet rs = null;
 
-    List tasks = null;
+    List<WorkflowTask> tasks = null;
 
     try {
       conn = dataSource.getConnection();
@@ -464,11 +465,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING, "Exception getting tasks for workflow. Message: "
           + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getTasksByWorkflowName transaction. Message: "
@@ -483,7 +486,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -492,7 +494,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -502,24 +503,23 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
     return tasks;
   }
 
-  public List getWorkflowsForEvent(String eventName) throws RepositoryException {
+  public List<Workflow> getWorkflowsForEvent(String eventName) throws RepositoryException {
     return getWorkflowsForEvent(eventName, true, true);
   }
 
-  public List getWorkflowsForEvent(String eventName, boolean getTasks,
+  public List<Workflow> getWorkflowsForEvent(String eventName, boolean getTasks,
       boolean getConditions) throws RepositoryException {
     Connection conn = null;
     Statement statement = null;
     ResultSet rs = null;
 
-    List workflows = null;
+    List<Workflow> workflows = null;
 
     try {
       conn = dataSource.getConnection();
@@ -552,11 +552,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING, "Exception getting workflows for event. Message: "
           + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getWorkflowsForEvent transaction. Message: "
@@ -571,7 +573,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -580,7 +581,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -590,7 +590,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -603,7 +602,7 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
    * @see org.apache.oodt.cas.workflow.repository.WorkflowRepository#
    * getConditionsByTaskName(java.lang.String)
    */
-  public List getConditionsByTaskName(String taskName)
+  public List<WorkflowCondition> getConditionsByTaskName(String taskName)
       throws RepositoryException {
     Connection conn = null;
     Statement statement = null;
@@ -641,11 +640,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING, "Exception getting conditions for task. Message: "
           + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getConditionsByTaskName transaction. Message: "
@@ -660,7 +661,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -669,7 +669,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -679,7 +678,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -728,11 +726,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING, "Exception getting conditions for task. Message: "
           + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getConditionsByTaskId transaction. Message: "
@@ -747,7 +747,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -756,7 +755,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -766,7 +764,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -782,7 +779,12 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
     WorkflowTaskConfiguration config = null;
 
     try {
-      conn = dataSource.getConnection();
+      if(dataSource!=null) {
+        conn = dataSource.getConnection();
+      }
+      else{
+        throw new RepositoryException("Null data source");
+      }
       statement = conn.createStatement();
 
       String getConfigurationSql = "SELECT * from workflow_task_configuration WHERE workflow_task_id = "
@@ -803,12 +805,14 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING,
           "Exception getting task configuration for taskId: " + taskId
               + " Message: " + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getConfigurationBytaskId transaction. Message: "
@@ -823,7 +827,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -832,7 +835,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -842,7 +844,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -879,12 +880,14 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING,
           "Exception getting task configuration for condId: " + condId
               + " Message: " + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getConfigurationByConfigurationId transaction. Message: "
@@ -899,7 +902,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -908,7 +910,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -918,7 +919,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -958,11 +958,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING,
           "Exception getting task by id. Message: " + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getWorkflowTaskById transaction. Message: "
@@ -977,7 +979,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -986,7 +987,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -996,7 +996,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -1031,15 +1030,19 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       while (rs.next()) {
         // get an instance of the class name
         condition = DbStructFactory.getWorkflowCondition(rs, false);
-        condition.setCondConfig(getConfigurationByConditionId(conditionId));
+        if (condition != null) {
+          condition.setCondConfig(getConfigurationByConditionId(conditionId));
+        }
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING,
           "Exception getting condition by id. Message: " + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getWorkflowConditionById transaction. Message: "
@@ -1054,7 +1057,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -1063,7 +1065,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -1073,7 +1074,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -1087,7 +1087,7 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
    * org.apache.oodt.cas.workflow.repository.WorkflowRepository#getRegisteredEvents
    * ()
    */
-  public List getRegisteredEvents() throws RepositoryException {
+  public List<String> getRegisteredEvents() throws RepositoryException {
     Connection conn = null;
     Statement statement = null;
     ResultSet rs = null;
@@ -1115,11 +1115,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING, "Exception getting registered events. Message: "
           + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getRegisteredEvents transaction. Message: "
@@ -1134,7 +1136,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -1143,7 +1144,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -1153,7 +1153,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -1181,9 +1180,8 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         }              
       }
     }
-    
-    String taskId = this.commitTask(null, task);
-    return taskId;
+
+    return this.commitTask(null, task);
   }
 
   /*
@@ -1196,15 +1194,14 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
   @Override
   public String addWorkflow(Workflow workflow) throws RepositoryException {
     // first check to see that its tasks are all present
-    if (workflow.getTasks() == null
-        || (workflow.getTasks() != null && workflow.getTasks().size() == 0)) {
+    if (workflow.getTasks() == null || (workflow.getTasks().size() == 0)) {
       throw new RepositoryException("Attempt to define a new worklfow: ["
           + workflow.getName() + "] with no tasks.");
     }
 
     List<WorkflowTask> allTasks = this.getTasks();
 
-    for (WorkflowTask task : (List<WorkflowTask>) workflow.getTasks()) {
+    for (WorkflowTask task : workflow.getTasks()) {
       if (!this.hasTaskId(allTasks, task.getTaskId())) {
         throw new RepositoryException("Reference in new workflow: ["
             + workflow.getName() + "] to undefined task with id: ["
@@ -1226,8 +1223,7 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
     }
 
-    String workflowId = this.commitWorkflow(workflow);
-    return workflowId;
+    return this.commitWorkflow(workflow);
   }
 
   /*
@@ -1274,13 +1270,15 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(
           Level.WARNING,
           "Exception getting conditions for workflow. Message: "
               + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getConditionsByWorkflowId transaction. Message: "
@@ -1295,7 +1293,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -1304,7 +1301,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -1314,7 +1310,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -1357,11 +1352,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING, "Exception getting tasks for workflow. Message: "
           + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getTasksByWorkflowId transaction. Message: "
@@ -1376,7 +1373,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -1385,7 +1381,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -1395,7 +1390,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -1413,7 +1407,7 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       conn.setAutoCommit(false);
       statement = conn.createStatement();
 
-      String sql = "INSERT INTO workflows (workflow_name) VALUES ('"
+      String sql = "INSERT INTO workflows (workflow_id, workflow_name) VALUES ('"+workflow.getId()+"','"
           + workflow.getName() + "')";
 
       LOG.log(Level.FINE, "commitWorkflowToDB: Executing: " + sql);
@@ -1436,11 +1430,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       conn.commit();
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING,
           "Exception adding workflow. Message: " + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(
             Level.SEVERE,
@@ -1456,7 +1452,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -1465,7 +1460,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -1475,7 +1469,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -1503,7 +1496,7 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
       synchronized (taskId) {
-        taskId = String.valueOf(new Integer(taskId) + 1);
+        taskId = String.valueOf(Integer.valueOf(taskId) + 1);
       }
 
       task.setTaskId(taskId);
@@ -1528,11 +1521,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       conn.commit();
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING,
           "Exception adding task. Message: " + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE, "Unable to rollback task transaction. Message: "
             + e2.getMessage());
@@ -1546,7 +1541,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -1555,7 +1549,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -1565,7 +1558,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -1585,7 +1577,7 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
 
       String getConditionsSql = "SELECT workflow_conditions.* "
           + "FROM workflow_conditions "
-          + "ORDER BY condition_id";
+          + "ORDER BY workflow_condition_id";
 
       LOG.log(Level.FINE, "getConditions: Executing: "
           + getConditionsSql);
@@ -1604,11 +1596,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING, "Exception getting conditions. Message: "
           + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(Level.SEVERE,
             "Unable to rollback getConditions transaction. Message: "
@@ -1623,7 +1617,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -1632,7 +1625,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -1642,7 +1634,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -1661,7 +1652,8 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       statement = conn.createStatement();
 
       String getTasksSql = "SELECT workflow_tasks.*, workflow_task_map.task_order "
-          + "FROM workflow_tasks " + "ORDER BY workflow_task_map.task_order";
+          + "FROM workflow_tasks, workflow_task_map WHERE workflow_tasks.workflow_task_id = workflow_task_map.workflow_task_id "
+                           + "ORDER BY workflow_task_map.task_order";
 
       LOG.log(Level.FINE, "getTasks: Executing: " + getTasksSql);
       rs = statement.executeQuery(getTasksSql);
@@ -1684,11 +1676,13 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.log(Level.SEVERE, e.getMessage());
       LOG.log(Level.WARNING,
           "Exception getting tasks. Message: " + e.getMessage());
       try {
-        conn.rollback();
+        if (conn != null) {
+          conn.rollback();
+        }
       } catch (SQLException e2) {
         LOG.log(
             Level.SEVERE,
@@ -1704,7 +1698,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        rs = null;
       }
 
       if (statement != null) {
@@ -1713,7 +1706,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        statement = null;
       }
 
       if (conn != null) {
@@ -1723,7 +1715,6 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
         } catch (SQLException ignore) {
         }
 
-        conn = null;
       }
     }
 
@@ -1731,8 +1722,9 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
   }
 
   private boolean hasTaskId(List<WorkflowTask> tasks, String id) {
-    if (tasks == null || (tasks != null && tasks.size() == 0))
+    if (tasks == null || (tasks.size() == 0)) {
       return false;
+    }
 
     for (WorkflowTask task : tasks) {
       if (task.getTaskId().equals(id)) {
@@ -1744,8 +1736,9 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
   }
 
   private boolean hasConditionId(List<WorkflowCondition> conds, String id) {
-    if (conds == null || (conds != null && conds.size() == 0))
+    if (conds == null || (conds.size() == 0)) {
       return false;
+    }
 
     for (WorkflowCondition cond : conds) {
       if (cond.getConditionId().equals(id)) {
@@ -1758,8 +1751,7 @@ public class DataSourceWorkflowRepository implements WorkflowRepository {
 
   private void handleGlobalWorkflowConditions(Workflow workflow) throws RepositoryException {
     if (workflow.getConditions() != null && workflow.getConditions().size() > 0) {
-      if (workflow.getTasks() == null
-          || (workflow.getTasks() != null && workflow.getTasks().size() == 0)) {
+      if (workflow.getTasks() == null || (workflow.getTasks().size() == 0)) {
         workflow.setTasks(new Vector<WorkflowTask>());
       }
 
